[project]
name = "prd-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Sean Daly", email = "the_sean_c@fastmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
    "mcp[cli]>=1.6.0",
    "pydantic-ai>=0.0.52",
    "pydantic-settings>=2.8.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.4",
]
